src/objects/ExAM_Configuration__c.object
<CustomObject>
    <description>Used to support the configuration of the ExAM App.</description>
    <fields>
        <fullName>Add_Response_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Response Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager_List_Status_Filter__c</fullName>
        <label>Assignment Manager List Status Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Configuration__c</fullName>
        <label>Case Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DTV_Question_Display_Text__c</fullName>
        <label>Z-DTV Question Display Text(DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Management_Tab_Filter__c</fullName>
        <label>Data Management Tab Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Tree_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Tree Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Tree__c</fullName>
        <label>Decision Tree</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Case_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Case Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>ExAM Configurations</relationshipLabel>
        <relationshipName>ExAM_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_AM_List_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide AM List Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Assessable_Record_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Assessable Record Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Data_Viewer_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Data Viewer Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Knowledge_Article_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Knowledge Article Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Related_Assignment_Manager1_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Related Assignment Manager1 Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Related_Assignment_Manager2_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Related Assignment Manager2 Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Related_Assignment_Manager3_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Related Assignment Manager3 Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Save_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Save Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Field_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Field Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Content_Field_Name__c</fullName>
        <label>Knowledge Article Content Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Type_Name__c</fullName>
        <label>Knowledge Article Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Image_Size__c</fullName>
        <label>Mobile App Image Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Assessable_Object__c</fullName>
        <label>Mobile Assessable Object</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Default_Assesable_Object__c</fullName>
        <label>Mobile Default Assesable Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Sync_Additional_Templates__c</fullName>
        <description>Field to hold the Ids of the Assessment Templates that need to be synced into mobile app (in addition to the ones configured for Lens Viewer)</description>
        <inlineHelpText>Field to hold the Ids of the Assessment Templates that need to be synced into mobile app (in addition to the ones configured for Lens Viewer)</inlineHelpText>
        <label>Mobile Sync Additional Templates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Sync_Assignment_Manager_Statuses__c</fullName>
        <description>Field to hold the Statuses used to filter the Assignment Managers synced for the mobile app</description>
        <label>Mobile Sync Assignment Manager Statuses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Sync_Future_X_Days__c</fullName>
        <label>Mobile Sync Future X Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Sync_Last_X_Days__c</fullName>
        <label>Mobile Sync Last X Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Status_on_Submit__c</fullName>
        <label>Overall Status on Submit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Type_Template__c</fullName>
        <label>Primary Assessment Type Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relate_Decision_Tree_on_Continue_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relate Decision Tree on Continue Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Assessment_Type_1_Template__c</fullName>
        <label>Related Assessment Type 1 Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Assessment_Type_2_Template__c</fullName>
        <label>Related Assessment Type 2 Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Assessment_Type_3_Template__c</fullName>
        <label>Related Assessment Type 3 Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Builder_Page_Footer__c</fullName>
        <label>Report Builder Page Footer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Report_Builder_Page_Header__c</fullName>
        <label>Report Builder Page Header</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Skip_Answer_For_Decision_Tree_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Answer For Decision Tree Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turn_Off_Save_Submit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Turn Off Save &amp; Submit</label>
        <type>Checkbox</type>
    </fields>
    <label>ExAM Configuration</label>
    <nameField>
        <label>ExAM Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExAM Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>